--- a/templates/docs/docs-advanced-components.mustache
+++ b/templates/docs/docs-advanced-components.mustache
@@ -945,7 +945,7 @@
                <td>One square image that fills the entire tile, no text.</td>
                <td>
                   <a class="tile square image" href="#">
-                     <img src="holder.js/150x150" alt=""/>
+                     <img src="holder.js/150x150/#377C89:#FFFFFF" alt=""/>
                   </a>
                </td>
             </tr>
@@ -968,7 +968,7 @@
                <td>Top: One square image, no text. Bottom: One header string in larger text on the first line, three strings of regular text on each of the next three lines. Text does not wrap.</td>
                <td>
                   <a class="tile squarepeek" href="#">
-                     <img src="holder.js/150x150" alt=""/>
+                     <img src="holder.js/150x150/#377C89:#FFFFFF" alt=""/>
                      <div class="text-inner">
                         <div class="text-header">Header</div>
                         <div class="text">Text field 1</div>
@@ -983,7 +983,7 @@
                <td>Top: Square image, no text. Bottom: One header string in larger text on the first line, over one string of regular text wrapped over a maximum of three lines.</td>
                <td>
                   <a class="tile squarepeek" href="#">
-                     <img src="holder.js/150x150" alt=""/>
+                     <img src="holder.js/150x150/#377C89:#FFFFFF" alt=""/>
                      <div class="text-inner">
                         <div class="text-header">Header</div>
                         <div class="text3">Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim.</div>
@@ -996,7 +996,7 @@
                <td>Top: Square image, no text. Bottom: Four strings of regular text on four lines. Text does not wrap.</td>
                <td>
                   <a class="tile squarepeek" href="#">
-                     <img src="holder.js/150x150" alt=""/>
+                     <img src="holder.js/150x150/#377C89:#FFFFFF" alt=""/>
                      <div class="text-inner">
                         <div class="text">Text field 1</div>
                         <div class="text">Text field 2</div>
@@ -1011,7 +1011,7 @@
                <td>Top: Square image, no text. Bottom: One string of regular text wrapped over a maximum of four lines.</td>
                <td>
                   <a class="tile squarepeek" href="#">
-                     <img src="holder.js/150x150" alt=""/>
+                     <img src="holder.js/150x150/#377C89:#FFFFFF" alt=""/>
                      <div class="text-inner">
                         <div class="text4">Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim.</div>
                      </div>
@@ -1264,7 +1264,7 @@
                <td>One wide image that fills the entire tile, no text.</td>
                <td>
                   <a class="tile wide image" href="#">
-                     <img src="assets/img/tile-wide.jpg" alt=""/>
+                     <img src="holder.js/310x150/#377C89:#FFFFFF" alt=""/>
                   </a>
                </td>
             </tr>
@@ -1303,7 +1303,7 @@
                <td>One wide image over one string of regular text wrapped over a maximum of two lines.</td>
                <td>
                   <a class="tile wide imagetext wideimage" href="#">
-                     <img src="assets/img/tile-wide.jpg" alt=""/>
+                     <img src="holder.js/310x150/#377C89:#FFFFFF" alt=""/>
                      <div class="textover-wrapper">
                         <div class="text2">Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim.</div>
                      </div>
@@ -1315,7 +1315,7 @@
                <td>One wide image over one string of regular text wrapped over a maximum of two lines.</td>
                <td>
                   <a class="tile wide imagetext wideimage" href="#">
-                     <img src="assets/img/tile-wide.jpg" alt=""/>
+                     <img src="holder.js/310x150/#377C89:#FFFFFF" alt=""/>
                      <div class="textover-wrapper">
                         <div class="text">Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim.</div>
                         <div class="text">Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim.</div>
@@ -1423,7 +1423,7 @@
                <td>
                   <a class="tile tilewideblockandtext02" href="#">
                      <div class="tile-column">
-                        <img src="assets/img/tile-wide.jpg" alt=""/>
+                        <img src="holder.js/310x150/#377C89:#FFFFFF" alt=""/>
                      </div>
                   </a>
                </td>
@@ -1454,7 +1454,7 @@
                   <td>
                      <a class="tile widepeek" href="#">
                         <div class="tile-image-wrapper">
-                           <img src="assets/img/tile-wide.jpg" alt=""/>
+                           <img src="holder.js/310x150/#377C89:#FFFFFF" alt=""/>
                         </div>
                         <div class="text">Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim.</div>
                      </a>
