Completed tile templates docs

--- a/less/bootmetro/tiles.less
+++ b/less/bootmetro/tiles.less
@@ -384,17 +384,17 @@
    .tile.widepeek {
       width: 310px;
       height: 300px;
+
+      .tile {
+         margin: 0;
+         &:hover {
+            outline: 0;
+         }
+      }
    }
-   .tile.ad.ad125 {
-      width: 125px;
-      height: 125px;
-      padding: 12px 13px 13px 12px;
-   }
-   .tile.wide.ad.ad125 {
-      width: 180px;
-      height: 150px;
-      padding: 0 65px;
-   }
+
+
+
 }
 
 
