--- a/templates/docs/sidebar_partials/sidebar-docs-advanced-components.mustache
+++ b/templates/docs/sidebar_partials/sidebar-docs-advanced-components.mustache
@@ -41,8 +41,22 @@
                <li><a href="#metro-tiles-square-squarepeek">Square peek templates</a></li>
             </ul>
          </li>
-         <li><a href="#metro-tiles-wide">Wide templates</a></li>
-         <li><a href="#metro-tiles-widepeek">Widepeek templates</a></li>
+         <li>
+            <a href="#metro-tiles-wide">Wide templates</a>
+            <ul class="nav">
+               <li><a href="#metro-tiles-wide-textonly">Text Only Tiles</a></li>
+               <li><a href="#metro-tiles-wide-imageonly">Image Only Tiles</a></li>
+               <li><a href="#metro-tiles-wide-imagetext">Image &amp; text templates</a></li>
+            </ul>
+         </li>
+         <li>
+            <a href="#metro-tiles-widepeek">Widepeek templates</a>
+            <!--<ul class="nav">-->
+               <!--<li><a href="#metro-tiles-wide-textonly">Text Only Tiles</a></li>-->
+               <!--<li><a href="#metro-tiles-wide-imageonly">Image Only Tiles</a></li>-->
+               <!--<li><a href="#metro-tiles-wide-imagetext">Image &amp; text templates</a></li>-->
+            <!--</ul>-->
+         </li>
       </ul>
    </li>
 
