--- a/templates/demo/hub.mustache
+++ b/templates/demo/hub.mustache
@@ -2,10 +2,9 @@
 ================================================== -->
 <header id="nav-bar" class="container">
    <div class="row">
-      <div class="span12">
+      <div class="span6">
          <div id="header-container">
-            <a id="backbutton" class="win-backbutton" href="../index.html"></a>
-            <h5>{{appname}}</h5>
+            <h5>{{appname}} Demo</h5>
             <div class="dropdown">
                <a class="header-dropdown dropdown-toggle accent-color" data-toggle="dropdown" href="#">
                   {{_i}}Start{{/i}}
@@ -14,6 +13,8 @@
                {{>headermenu}}
             </div>
          </div>
+      </div>
+      <div class="span6">
          {{>loggeduser}}
       </div>
    </div>
@@ -27,7 +28,7 @@
 
             <div id="section1" class="panorama-section tile-span-4">
 
-               <h2>BootMetro Demos</h2>
+               <h2>Group One</h2>
 
                <a class="tile wide imagetext bg-color-orange" href="./metro-layouts.html">
                   <div class="image-wrapper">
@@ -95,7 +96,7 @@
 
             <div id="section2" class="panorama-section tile-span-4">
 
-               <h2>Bootstrap Metro</h2>
+               <h2>Group two</h2>
 
                <a class="tile wide imagetext bg-color-blue" href="./scaffolding.html">
                   <div class="image-wrapper">
@@ -140,8 +141,8 @@
 
          </div>
          </div>
-         <a id="panorama-scroll-prev" href="#">&#xe12e;</a>
-         <a id="panorama-scroll-next" href="#">&#xe12a;</a>
+         <a id="panorama-scroll-prev" href="#"></a>
+         <a id="panorama-scroll-next" href="#"></a>
       </div>
    </div>
 </div>
