--- a/less/bootmetro/buttons.less
+++ b/less/bootmetro/buttons.less
@@ -53,12 +53,12 @@ Back button.
    line-height: 38px; /* line-height must match the content box height. */
    vertical-align: baseline;
 }
-.win-backbutton::before {
+.win-backbutton:before {
    font-weight: normal;
    font-family: 'IcoMoon';
    content: "\e41c";
-   vertical-align: 24%;
-   font-size: 24px;
+   vertical-align: top;
+   font-size: 22px;
 }
 .win-backbutton:disabled,
 .win-backbutton:disabled:active {
