--- a/templates/docs/sidebar_partials/sidebar-docs-advanced-components.mustache
+++ b/templates/docs/sidebar_partials/sidebar-docs-advanced-components.mustache
@@ -57,6 +57,12 @@
                <!--<li><a href="#metro-tiles-wide-imagetext">Image &amp; text templates</a></li>-->
             <!--</ul>-->
          </li>
+         <li>
+            <a href="#metro-tiles-select">Tiles selection</a>
+         </li>
+         <li>
+            <a href="#metro-tiles-colors">Color alternatives</a>
+         </li>
       </ul>
    </li>
 
