--- a/less/bootmetro/scaffolding.less
+++ b/less/bootmetro/scaffolding.less
@@ -1,13 +1,13 @@
 //
 // Scaffolding
 // --------------------------------------------------
-html {
-   background-color: #FFF;
-}
+//html {
+//   background-color: #FFF;
+//}
 
 body {
-   padding-top: 24px;
-   padding-bottom: 88px;
+//   padding-top: 24px;
+//   padding-bottom: 88px;
    position: relative;
 //   font-family: "Open Sans",Arial,Helvetica,Sans-Serif;
    font-weight: 300;
@@ -90,8 +90,9 @@ header {
 #nav-bar {
    display: block;
    position: relative;
-   height: 64px;
-   margin-bottom: 20px;
+   height: auto;
+   padding-top: 24px;
+   padding-bottom: 20px;
 }
 
 
