--- a/less/bootmetro/tiles.less
+++ b/less/bootmetro/tiles.less
@@ -59,6 +59,7 @@
       position: relative;
       overflow: hidden;
       width: 10000px;
+      padding-bottom: 24px;
 
       h2 {
          margin-left: 5px;
