--- a/templates/demo/_layout.mustache
+++ b/templates/demo/_layout.mustache
@@ -83,16 +83,14 @@
 
    <script type="text/javascript">
 
-      $("#wrap").perfectScrollbar({
-         wheelSpeed: 20,
-         wheelPropagation: true
-      })
-
       $('.panorama').panorama({
          nicescroll: false,
          showscrollbuttons: true,
          keyboard: true
       });
+
+      $(".panorama").perfectScrollbar();
+
 
       $('#pivot').pivot();
    </script>
