--- a/templates/demo/hub.mustache
+++ b/templates/demo/hub.mustache
@@ -2,27 +2,25 @@
 
    <!-- Header
    ================================================== -->
-   <div id="nav-bar" class="container">
-      <div class="row">
-         <div class="span6">
-            <div id="header-container">
-               <h5>{{appname}} Demo</h5>
-               <div class="dropdown">
-                  <a class="header-dropdown dropdown-toggle accent-color" data-toggle="dropdown" href="#">
-                     Start
-                     <b class="caret"></b>
-                  </a>
-                  {{>headermenu}}
-               </div>
+   <div id="nav-bar" class="-container">
+      <div class="pull-left">
+         <div id="header-container">
+            <h5>{{appname}} Demo</h5>
+            <div class="dropdown">
+               <a class="header-dropdown dropdown-toggle accent-color" data-toggle="dropdown" href="#">
+                  Start
+                  <b class="caret"></b>
+               </a>
+               {{>headermenu}}
             </div>
          </div>
-         <div class="span6">
-            {{>loggeduser}}
-         </div>
+      </div>
+      <div class="pull-right">
+         {{>loggeduser}}
       </div>
    </div>
 
-   <div id="metro-container" class="container">
+   <div id="metro-container" class="-container">
       <!--<div class="row">-->
          <!--<div id="hub" class="metro">-->
             <div class="metro panorama">
